# cxx_pimpl_wrapper

./: CMakeLists.txt  README.md
include/: pimpl_wrapper.hpp
test/: pimpl_device_test.cpp  pimpl_device_test.h  pimpl_wrapper_test.cpp
